--- a/import_quandl_data.ipynb
+++ b/import_quandl_data.ipynb
@@ -23,19 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-06T01:47:07.126660Z",
-     "start_time": "2020-07-06T01:47:03.725026Z"
+     "end_time": "2020-07-06T02:17:24.622560Z",
+     "start_time": "2020-07-06T02:17:23.476737Z"
     }
    },
    "outputs": [],
    "source": [
     "import quandl\n",
-    "token = 'woChDqwre1ymgyyL6yCy'\n",
-    "quandl.ApiConfig.api_key = 'woChDqwre1ymgyyL6yCy'\n",
-    "\n",
+    "quandl.ApiConfig.api_key = 'removed'\n",
     "\n",
     "us_treasury_yield = quandl.get(\"USTREASURY/YIELD\")\n",
     "# us_treasury_yield = quandl.get(\"USTREASURY/YIELD\", authtoken=token)\n",
